name:                AcidWashDB
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/AcidWashDB/AcidWashDB
license:             AGPL
license-file:        LICENSE
author:              Dean Thompson
maintainer:          deansherthompson@gmail.com
copyright:           (c) Dean Thompson 2017
category:            app
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable royal-exe
  hs-source-dirs:      royal
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , AcidWashDB
  default-language:    Haskell2010

test-suite royal-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , AcidWashDB
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/AcidWashDB/AcidWashDB
